Fixed an issue of the push menu cutting off before end of page
Issue: In some pages where the height extends beyond the full screen,
the push menu would not fill in the excess. This was remedied by setting
the push menu to a fixed position.

--- a/vapourware/css/style.css
+++ b/vapourware/css/style.css
@@ -1,7 +1,8 @@
 
 /*General page styling*/
 html, body {
-   height: 100%;
+	width: 100%;
+    height: 100%;
 }
 
 body{
@@ -175,7 +176,7 @@ input[type=checkbox]:checked ~ .slide-menu .menu li {
 }
 .slide-menu {
    transform: translate3d(-250px, 0, 0);
-   position: absolute;
+   position: fixed;
    width: 250px;
    background: #800080;
    color: #ddd;
